--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   "author": "Charley DAVID <hello@calyh.re>",
   "license": "MIT",
   "dependencies": {
-    "babel-core": "^6.26.0",
     "remark-abbr": "^1.0.7",
     "unist-util-visit": "^1.2.0"
   },
@@ -18,24 +17,22 @@
     "remark-abbr"
   ],
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-eslint": "^8.0.3",
-    "babel-jest": "^21.2.0",
-    "babel-preset-env": "^1.6.1",
-    "cross-env": "^5.1.1",
+    "@babel/cli": "^7.7.0",
+    "@babel/core": "^7.7.2",
+    "@babel/preset-env": "^7.7.1",
+    "babel-eslint": "^10.0.3",
     "dedent": "^0.7.0",
-    "eslint": "^4.12.1",
-    "eslint-plugin-prettier": "^2.3.1",
-    "jest": "^21.2.1",
-    "prettier": "^1.8.2",
-    "regenerator-runtime": "^0.11.0",
+    "eslint": "^6.6.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "jest": "^24.9.0",
+    "prettier": "^1.19.1",
     "remark": "^8.0.0"
   },
   "scripts": {
-    "start": "babel -w src --out-dir . --ignore __tests__",
-    "build": "babel src --out-dir . --ignore __tests__",
+    "start": "babel -w src --out-dir . --ignore */__tests__",
+    "build": "babel src --out-dir . --ignore */__tests__",
     "test": "jest",
-    "prepublish": "cross-env NODE_ENV=production yarn build"
+    "prepublish": "NODE_ENV=production yarn build"
   },
   "jest": {
     "verbose": true
