Properly use remark-abbr without duplication

--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "author": "Charley DAVID <hello@calyh.re>",
   "license": "MIT",
   "dependencies": {
-    "remark-abbr": "^1.0.7",
-    "unist-util-visit": "^1.2.0"
+    "remark-abbr": "^1.0.7"
   },
   "keywords": [
     "gatsby",
@@ -24,9 +23,9 @@
     "dedent": "^0.7.0",
     "eslint": "^6.6.0",
     "eslint-plugin-prettier": "^3.1.1",
+    "gatsby-transformer-remark": "<= 3",
     "jest": "^24.9.0",
-    "prettier": "^1.19.1",
-    "remark": "^8.0.0"
+    "prettier": "^1.19.1"
   },
   "scripts": {
     "start": "babel -w src --out-dir . --ignore */__tests__",
@@ -36,5 +35,8 @@
   },
   "jest": {
     "verbose": true
+  },
+  "peerDependencies": {
+    "gatsby-transformer-remark": "<= 3"
   }
 }
